fixed: white spacing, html, css

--- a/src/css/site.less
+++ b/src/css/site.less
@@ -1,19 +1,21 @@
 
-body{
-  background-color: black;
-	background-color: rgba(0,0,0,0.93);
-
+body {
+  background-color: #191919;
   color: white;
-	color: rgba(255, 255, 255,0.9);
 }
-header{
 
+h1 {
+  text-align: center;
+  font-size: 3em;
+  text-decoration: underline;
 }
-main{
+
+main {
   display:block;
   margin:0 auto;
   max-width: 600px;
-  a{
+
+  a {
     float: left;
     width: 100%;
     padding: 0.3em;
@@ -21,30 +23,34 @@ main{
     font-size:1.4em;
     color:orange;
   }
-  a:hover,a:focus{
+
+  a:hover,a:focus {
     color: white;
   }
-  input,p,label{
+
+  input,p,label,legend {
   	width: 100%;
   	font-size: 2.5em;
   }
-  strong{
+
+  strong {
     color:#88c744;
-    font-size: 2.5em;
   }
-  input{
+
+  input {
   	color:#c70945;
   }
-}
 
-h1{
-    text-align: center;
-    font-size: 3em;
-    text-decoration: underline;
+}
+footer {
+  margin: 0 auto;
+  max-width: 600px;
+
+  p{
+    padding: 0.3em;
+    margin-top: 2em;
   }
-.colourSwap{
-  color:#c71b00;
 }
-footer{
-
+.colourSwap {
+  color:#c71b00;
 }
